Revert "Update duracloud branch (#1748)"
This reverts commit dceb1d8757f5fee5d275443c0d1f842bbb0a93d6.